Fix watch a conversation font too small issue

--- a/src/home/components/Interaction.css
+++ b/src/home/components/Interaction.css
@@ -2,7 +2,7 @@
 } */
 
 .checkbox-interactive {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 
   height: 4vh;
 }
